@@ -1,3 +1,8 @@
+Wed Jan 12 23:55:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* io.c (rb_f_syscall): Add 64bit Linux support. Some syscall takes
+	  long type arguments.
+
 Thu Jan 13 00:06:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* io.c (rb_f_syscall): Add warning messages. [ruby-core:34062]
